--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,15 @@
     <p class="footer-heading">{{ site.title }}</p>
 
     <div class="footer-col-wrapper">
+	
+	 <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+		  <li><a href="https://plus.google.com/+Allfreetrickscom">Google Plus</a></li>
+          <li><a href="https://www.facebook.com/allfreetrickscom">Facebook</a></li>
+		  <li><a href="https://twitter.com/allfreetricks">Twitter</a></li>
+        </ul>
+      </div>
+	
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
