--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,9 @@
       </a>
 
       <div class="trigger">
-          <a class="page-link" href="/free-internet-tricks-and-offers.html">Free Internet Tricks</a>
-		  <a class="page-link" href="/free-recharge-tricks-and-offers.html">Free Recharge Tricks</a>
+		  <a class="page-link" href="/coupons.html">Coupons</a>
+          <a class="page-link" href="/free-internet-tricks-and-offers.html">Internet Offers</a>
+		  <a class="page-link" href="/free-recharge-tricks-and-offers.html">Recharge Offers</a>
       </div>
     </nav>
 
