--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,15 @@
         </ul>
       </div>
 	
+	  <div class="footer-col footer-col-2">
+		<ul class="contact-list">
+		  <li><a href="/about.html">About US</a></li>
+		  <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="/privacy-policy.html">Privacy Policy</a></li>
+		  <li><a href="/disclaimer.html">Disclamair</a></li>
+        </ul>
+      </div> 
+	  
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
