--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,7 @@
       </a>
 
       <div class="trigger">
-		  <a class="page-link" href="/coupons.html">Coupons</a>
-		  <a class="page-link" href="/free-recharge-tricks-and-offers.html">Recharge Offers</a>
+		  <a class="page-link" href="/free-recharge-tricks-and-offers.html">Recharge Tricks</a>
 		  <a class="page-link" href="https://www.facebook.com/groups/allfreetricks" rel="nofollow" target="_blank">Join FB Group</a>
       </div>
     </nav>
