--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,9 @@
 	 <div class="footer-col footer-col-1">
         <ul class="contact-list">
 		  <li><a href="https://plus.google.com/+Allfreetrickscom">Google Plus</a></li>
-          <li><a href="https://www.facebook.com/allfreetrickscom">Facebook</a></li>
-		  <li><a href="https://twitter.com/allfreetricks">Twitter</a></li>
+          <li><a href="https://www.facebook.com/allfreetrickscom">Facebook Page</a></li>
+		  <li><a href="https://www.facebook.com/groups/allfreetricks">Facebook Group</a></li>
+		  <li><a href="https://twitter.com/allfreetricks">Twitter Page</a></li>
         </ul>
       </div>
 	
