--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+	<span class="post-meta">Date: {{ page.date | date: "%-d %B %Y" }}</span><span class="post-meta" style="float:right">Category: <a href="/{{page.catlink}}">{{page.mycat}}</a></span>
  </header>
 
   <div class="post-content" itemprop="articleBody">
