--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,13 +1,4 @@
-<div id="disqus_thread"></div>
-<script>
-var disqus_config = function () {
-this.page.url = https://www.allfreetricks.com{{page.permalink}}; 
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://allfreetricks.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
+<div id="disqus_thread">
+<a style="color: #fff;background-color:#498AF4;padding: 10px 10px 10px 10px;" href="#" onclick="disqus();return false;" role="button" rel="nofollow">Open Comments</a>
+</div>
+<script type="text/javascript">var disqus_shortname = "allfreetricks";var disqus_loaded = false;function disqus() {if (!disqus_loaded)  {disqus_loaded = true;var e = document.createElement("script");e.type = "text/javascript";e.async = true;e.src = "//" + disqus_shortname + ".disqus.com/embed.js";(document.getElementsByTagName("head")[0] || document.getElementsByTagName("body")[0]).appendChild(e);}}</script>
