--- a/_includes/head.html
+++ b/_includes/head.html
@@ -309,6 +309,6 @@ pre {
       .home, article{padding:10px;width:auto;} 
 	  .sidebar {margin-top:20px;}
 	  }
-		
+#disqus_thread{text-align:center;}		
 </style>	
 </head>
